students/KukharchukIlya/task_02/src/k8s/base/deployment-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microshop-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: microshop-backend
  template:
    metadata:
      labels:
        app: microshop-backend
    spec:
      containers:
      - name: backend
        image: microshop-backend:latest
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          initialDelaySeconds: 60
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 5
        resources:
          requests:
            memory: "512Mi"
            cpu: "500m"
          limits:
            memory: "1Gi"
            cpu: "1000m"
