students/KukharchukIlya/task_02/src/k8s/base/deployment-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microshop-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: microshop-frontend
  template:
    metadata:
      labels:
        app: microshop-frontend
    spec:
      containers:
      - name: frontend
        image: microshop-frontend:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "200m"
