students/KukharchukIlya/task_02/src/k8s/base/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: microshop-backend
spec:
  selector:
    app: microshop-backend
  ports:
  - port: 80
    targetPort: 8080
  type: ClusterIP
