students/KukharchukIlya/task_02/src/k8s/base/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: microshop-frontend
spec:
  selector:
    app: microshop-frontend
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
