students/KukharchukIlya/task_02/src/k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microshop-ingress
spec:
  rules:
  - host: microshop.local
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: microshop-backend
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: microshop-frontend
            port:
              number: 80
